[package]
description = "A Blazingly fast JavaScript runtime"
name = "lunos"
version = "0.3.0"
edition = "2021"
authors = ["Thoq"]
license = "MIT"

[dependencies]
javascriptcore-sys = "0.0.6"
once_cell = "1.20.2"
tiny_http = "0.12.0"
tokio = { version = "1.42.0", features = ["full"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.release.build-override]
opt-level = 3

[profile.release.package."*"]
opt-level = 3
