[package]
name = "lunos"
description = "A Blazingly fast JavaScript runtime"
version = "0.6.3"
edition = "2021"
authors = ["LunosRS"]
license = "MIT"

[dependencies]
crossterm = "0.28.1"
javascriptcore-sys = { git = "https://github.com/LunosRS/jsc.git", branch = "main" }
once_cell = "1.20.2"
rustyline = "15.0.0"
num_cpus = "1.16.0"
rayon = "1.8.1"
tokio = { version = "1.43.0", features = ["full"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.release.build-override]
opt-level = 3

[profile.release.package."*"]
opt-level = 3

[build-dependencies]
cc = "1.0"
